# telegram-rate-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bak  README.md  config.py  models.py  models_test.py  pyproject.toml  rates.py  rates_v2.py  requirements.txt
app/: app.js
docs/: app.js  index.html  styles.css
